# socket_stream_video

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __main__.py  main.py
src/app/: flask_app.py
src/core/: .template.env  config.py
src/service/: client.py
src/service/socket_server/: interface.py  models.py
static/templates/: index.html
